Update Dockerfile
new filer version